--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MoviesAPP </string>
+    <string name="app_name">MovieAPP </string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="release_data">Fecha de lanzamiento:</string>
